resilient/tests/snapshots/diagnostics_snapshots__runtime_array_out_of_bounds@runtime_array_out_of_bounds.snap
---
source: tests/diagnostics_snapshots.rs
description: "fn main(int _d) {\n    let xs = [1, 2, 3];\n    return xs[10];\n}\nmain(0);\n"
expression: output
---
Error: <tmp>.rs:5:5: Runtime error: Index 10 out of bounds for array of length 3
Runtime error: Index 10 out of bounds for array of length 3
   main(0);
       ^
